--- a/checkpoint/bayes_final.Rmd
+++ b/checkpoint/bayes_final.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Neighborhood Deserts: Transportation Access & Housing Disparities in NYC"
-author: Freddy Barragan, Juthi Dewan, Sam Ding, Vichy Meas
+author: Freddy Barragan, Juthi Dewan, Sam Ding, Vicheartith Meas
 date: "15 December, 2021"
 output: 
   html_document:
@@ -26,7 +26,7 @@ knitr::opts_chunk$set(warning=FALSE, message=FALSE,
 
 # Motivation
 
-In collaboration with [Juthi Dewan](https://juthidewan-portfolio.netlify.app), [Sam Ding](https://sdingx.github.io/portfolio/), and Vichy Meas, we designed this project for our Bayesian Statistics course taught by [Dr. Alicia Johnson](https://ajohns24.github.io/portfolio/). We would like to thank Alicia for guiding us through Bayes and the capstone experience!
+In collaboration with [Juthi Dewan](https://juthidewan-portfolio.netlify.app), [Sam Ding](https://sdingx.github.io/portfolio/), and [Vichearith Meas](https://vmeas.com), we designed this project for our Bayesian Statistics course taught by [Dr. Alicia Johnson](https://ajohns24.github.io/portfolio/). We would like to thank Alicia for guiding us through Bayes and the capstone experience!
 
 A reproducible version of this blog post with all code can be found [here](https://freddybarragan.netlify.app/media/bayes/bayes_final.html).
 
